# urirun-openapi-import

./: .gitignore  CHANGELOG.md  README.md  goal.yaml  pyproject.toml
src/urirun_openapi_import/: __init__.py
src/urirun_openapi_import.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_import_pure.py  test_openapi_import.py
