[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-openapi-import"
version = "0.1.0"
description = "Import an OpenAPI/Swagger spec as urirun URI bindings — turn each operation into a typed http-service route. Pure stdlib, no urirun dependency."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
